# cupcake

./: .ansible-lint  .dockerignore  .env  .gitignore  .yamllint  CLAUDE.md  NATIVE_INSTALLATION.md  README.Cloudflared.md  README.md  build-multiarch.sh  captain-definition-coturn  captain-definition-export  captain-definition-import-data  captain-definition-llama  captain-definition-maintenance  captain-definition-ocr  captain-definition-rq  cron  docker-compose.cloudflared.demo.yml  docker-compose.demo.yml  generate_release_notes.py  install_cupcake.sh  install_cupcake_cloudflare.sh  install_cupcake_native.sh  install_cupcake_network_storage.sh  pyproject.toml  requirements.txt  requiremts.txt  test_shared_document_security.py  turnserver-start.sh  turnserver.conf  validate_models.py
.github/workflows/: ansible-ci.yml  build-pi-image.yml  test-ansible-deployment.yml
ansible-playbooks/: README.md  cupcake-playbook-vars.yml.example  cupcake-standalone.yml  initial.yml  inventory.yml.example  proxmox_provision.yml  test-local.sh  validate-deployment.sh
ansible-playbooks/templates/: cupcake-boot.service.j2  cupcake-web.service.j2  cupcake-worker.service.j2  cupcake.conf.j2  nginx-cupcake.conf.j2
cc/: admin.py  billing_services.py  filters.py  improved_docx_generator.py  mcp_serializers.py  mcp_urls.py  mcp_views.py  middlewares.py  models.py  permissions.py  rq_tasks.py  serializers.py  tests.py  utils.py  views.py  viewsets.py
cc/migrations/: 0001_initial.py  0002_session_stepannotation.py  0003_stepannotation_annotation_type_and_more.py  0004_stepvariation.py  0005_stepannotation_user.py  0006_alter_session_unique_id.py  0007_session_enabled.py  0008_alter_protocolsiostep_step_id.py  0009_alter_protocolsiostep_options.py  0010_rename_protocolsiomodel_protocolmodel_and_more.py  0011_protocolstep_original.py  0012_protocolstep_branch_from.py  0013_session_protocols.py  0014_timekeeper.py  0015_session_created_at_session_updated_at_and_more.py  0016_session_name.py  0017_timekeeper_current_duration_timekeeper_started.py  0018_protocolsection_alter_protocolstep_step_section.py  0019_remove_protocolstep_step_section_duration.py  0020_protocolmodel_user.py  0021_protocolmodel_enabled.py  0022_alter_protocolmodel_protocol_created_on_and_more.py  0031_protocolrating.py  (+128 more)
cupcake/: asgi.py  authentication.py  consumers.py  routing.py  settings.py  settings_test.py  urls.py  wsgi.py
dockerfiles/: Dockerfile  Dockerfile-backup  Dockerfile-base  Dockerfile-export-worker  Dockerfile-frontend  Dockerfile-frontend-cupcake-morag  Dockerfile-frontend-cupcake-mrc  Dockerfile-import-data-worker  Dockerfile-llama  Dockerfile-llama-worker  Dockerfile-maintenance  Dockerfile-mcp-worker  Dockerfile-nginx  Dockerfile-nginx-cupcake-morag  Dockerfile-nginx-cupcake-mrc  Dockerfile-nginx-demo  Dockerfile-ocr  Dockerfile-ssl  Dockerfile-transcribe-worker  Dockerfile-turn-stun
mcp_server/: README.md  __init__.py  server.py
nginx-conf/: cc.conf  nginx-cupcake-demo.conf  nginx-cupcake-morag-prod.conf  nginx-cupcake-mrc-prod.conf  nginx-prod.conf
raspberry-pi/: BUILD_COMPARISON.md  BUILD_USAGE.md  DOCKER_BUILD_USAGE.md  Dockerfile.cupcake-pigen  Dockerfile.pi-builder  HARDWARE_GUIDE.md  README.md  build-cupcake-pi-native.sh  build-docker-cupcake.sh  build-example.sh  build-pi-image-docker.sh  build-pi-image-modular.sh  build-pi-image.sh  generate-cupcake-config.sh  prebuild-frontend.sh
stage2z-cupcake/: prerun.sh
tests/: .coveragerc  README.md  docker-compose.test.yml  run_tests.py
(+170 files in other folders)
