[tool.poetry]
name = "cupcake"
version = "0.1.0"
description = ""
authors = ["Toan K. Phung <toanphung@proteo.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
djangorestframework = "^3.15.0"
markdown = "^3.6"
django-filter = "^25.1"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
django-cors-headers = "^4.3.0"
django-dbbackup = "^4.1.0"
gunicorn = "^23.0.0"
whitenoise = "^6.6.0"
hiredis = "^3.1.0"
redis = "^5.0.3"
django-redis = "^5.4.0"
beautifulsoup4 = "^4.12.3"
channels = "^4.0.0"
channels-redis = {extras = ["cryptography"], version = "^4.2.0"}
uvicorn = {extras = ["standard"], version = "^0.34.1"}
django-rq = "^3.0.0"
ffmpeg-python = "^0.2.0"
numpy = "^1.26.4"
python-docx = "^1.1.0"
webvtt-py = "^0.5.1"
pytesseract = "^0.3.10"
drf-chunked-upload = "^0.6.0"
pronto = "^2.5.8"
django-ses = "^4.4.0"
sdrf-pipelines = "^0.0.31"
openpyxl = "^3.1.5"
slack-sdk = "^3.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
