[tool.poetry]
name = "cupcake"
version = "0.1.0"
description = ""
authors = ["Toan K. Phung <toanphung@proteo.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
djangorestframework = "^3.15.0"
markdown = "^3.6"
django-filter = "^25.1"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
django-cors-headers = "^4.3.0"
django-dbbackup = "^4.1.0"
gunicorn = "^23.0.0"
whitenoise = "^6.6.0"
hiredis = "^3.1.0"
redis = "^6.2.0"
django-redis = "^6.0.0"
beautifulsoup4 = "^4.12.3"
channels = "^4.0.0"
channels-redis = {extras = ["cryptography"], version = "^4.2.0"}
uvicorn = {extras = ["standard"], version = "^0.35.0"}
django-rq = "^3.0.0"
ffmpeg-python = "^0.2.0"
numpy = "^2.2.6"
python-docx = "^1.1.0"
webvtt-py = "^0.5.1"
pytesseract = "^0.3.10"
drf-chunked-upload = "^0.6.0"
pronto = "^2.5.8"
django-ses = "^4.4.0"
sdrf-pipelines = "^0.0.32"
openpyxl = "^3.1.5"
slack-sdk = "^3.35.0"
django-simple-history = "^3.8.0"
mcp = "^1.11.0"
aiohttp = "^3.12.14"
pydantic = "^2.11.7"
sympy = "^1.14.0"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
testcontainers = "^4.10.0"
pytest-asyncio = "^1.0.0"
pytest-mock = "^3.14.1"
responses = "^0.25.7"
mypy = "^1.16.1"
types-requests = "^2.32.4.20250611"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
